<resources>
    <string name="app_name">FIFA Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuItem_settings">Settings</string>
    <string name="menuItem_search">Search</string>
    <string name="menuItem_requests">Requests</string>
    <string name="menuItem_add_match">Add Match</string>
    <string name="menuItem_camera">Camera</string>
    <string name="menuItem_confirm">Confirm</string>
    <string name="menuItem_filterMatches">Filter Matches</string>
    <string name="menuItem_requestUpdate">Request update</string>
    <string name="menuItem_viewPendingUpdate">View pending update</string>
    <string name="overview">Overview</string>
    <string name="statistics">Statistics</string>
    <string name="friends">Friends</string>
    <string name="players">Players</string>
    <string name="settings">Settings</string>
    <string name="starred">Starred</string>
    <string name="matches">Matches</string>
    <string name="title_activity_login">Sign in</string>
    <string name="drawer.fifa_legend">FIFA Legend</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="camera_button_description">Take Picture</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="name_camera_activity">Camera</string>
    <string name="server_client_id">433114915503-sc59fevmgf8npcehi31ooc8en6b7j7ak.apps.googleusercontent.com</string>
    <string name="notification_key">AAAAZNepIq8:APA91bF6NciH4LRjh-LyDtbTfSbympijUo1doURSTP63WIrYlEJMqt91RpHk5nCuzatYxz5TibqKvl9eK4-m5ThxzYMr3aUTxhv5TWmhcq_zRtsr_oncpY9U31YbqgX2jyubAxwhC0SNW5uKLq4vER1KN3I9Wab6cA</string>
    <string name="friend_request_from">Friend request from</string>
    <string name="accepted_your_friend_request">accepted your friend request</string>
    <string name="declined_your_friend_request">declined your friend request</string>
    <string name="new_friend_request_npe">New friend request</string>
    <string name="added_a_new_match">added a new match</string>
    <string name="notification_accept">ACCEPT</string>
    <string name="notification_decline">DECLINE</string>
    <string name="view">View</string>
    <string name="view_match">View match</string>
    <string name="error_generic">Something went wrong</string>
    <string name="title_activity_player_activty">Player Activity</string>
    <string name="search_players">Search Players</string>
    <string name="title_activity_create_series_activity">New Series</string>
    <string name="new_series">New Series</string>
    <string name="new_match">New Match</string>
    <string name="create_series_exit_confirmation">"Are you sure you want to discard this series?"</string>
    <string name="create_match_exit_confirmation">"Are you sure you want to discard this match?"</string>
    <string name="dialog_keep_editing">KEEP EDITING</string>
    <string name="dialog_discard">DISCARD</string>
    <string name="dialog_save">SAVE</string>
    <string name="uploading_series">Uploading series</string>
    <string name="please_wait">Please wait…</string>
    <string name="create_series_failed">Failed to create series</string>
    <string name="create_series_success">Series created successfully</string>
    <string name="series_saved">Series saved</string>
    <string name="series">Series</string>
    <string name="error_load_series">Failed to load series</string>
    <string name="matches_load_failed">Failed to load matches.</string>
    <string name="error_create_match">Failed to create match: %1$s</string>
    <string name="match_upload_success">Match created successfully.</string>
    <string name="uploading_match">Uploading match</string>
    <string name="request_sent">Request sent</string>
    <string name="request_approved">Request approved</string>
    <string name="request_declined">Request denied</string>
    <string name="confirm_discard_update">Discard this match update?</string>
    <string name="processing_image">Processing image</string>
    <string name="failed_to_parse">Failed to parse image.</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="team_logo">%1$s logo</string>
    <string name="retry">Retry</string>
    <string name="error_goals">Cannot change the match result</string>
    <string name="error_shots">You cannot have more Goals or Shots on Target than Shots</string>
    <string name="error_shots_on_target">You cannot have more Shots on Target than Shots, or fewer than Goals</string>
    <string name="error_possession">Total Possession must equal 100%</string>
    <string name="error_shot_accuracy">Shot Accuracy does not match with Shots and Shots on Target</string>
    <string name="error_empty_update">No changes made</string>
    <string name="error_penalties_same">Penalties cannot be the same for each side</string>
    <string name="error_missing_fields">Some required fields are empty</string>
    <plurals name="error_wrong_goals_count">
        <item quantity="one">%1$d goal is needed for %2$s and %3$d for %4$s</item>
        <item quantity="other">%1$d goals are needed for %2$s and %3$d for %4$s</item>
    </plurals>
    <plurals name="error_wrong_cards_count">
        <item quantity="one">%1$d card is needed for %2$s and %3$d for %4$s</item>
        <item quantity="other">%1$d cards are needed for %2$s and %3$d for %4$s</item>
    </plurals>
    <plurals name="error_wrong_injuries_count">
        <item quantity="one">%1$d injury is needed for %2$s and %3$d for %4$s</item>
        <item quantity="other">%1$d injuries are needed for %2$s and %3$d for %4$s</item>
    </plurals>
    <string name="not_found">Not found!</string>
    <string name="no_network">No network connection</string>
    <string name="unable_to_contact_server">Unable to contact server</string>
    <string name="unknown_error">Unknown error</string>
    <string name="friend_request_error">Unable to send friend request</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="play_match">Play Match</string>
    <string name="play_series">Play Series</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="friend_request_pending">Friend Request Pending</string>
    <string name="error_loading_players">Failed to load players.</string>
    <string name="error_select_teams">Please select teams</string>
    <string name="switch_sides">Switch sides</string>
    <string name="stats">Stats</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="shots_on_target">Shots On Target</string>
    <string name="possession_percent">Possession (%)</string>
    <string name="tackles">Tackles</string>
    <string name="fouls">Fouls</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="offsides">Offsides</string>
    <string name="injuries">Injuries</string>
    <string name="corners">Corners</string>
    <string name="shot_accuracy_percent">Shot Accuracy (%)</string>
    <string name="pass_accuracy_percent">Pass Accuracy (%)</string>
    <string name="penalties">Penalties</string>
    <string name="averages">Averages</string>
    <string name="records">Records</string>
    <string name="leaders">Leaders</string>
    <string name="overall">Overall</string>
    <string name="last_ten">Last 10</string>
    <string name="streak">Streak</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="cards">Cards</string>
    <string translatable="false" name="own_goal_code">(OG)</string>
    <string translatable="false" name="own_goal">OG</string>
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="title_activity_match">Match</string>
    <string name="match">Match</string>
    <string name="title_activity_match_update">Request update</string>
    <string name="review_update">Review update</string>
    <string name="pending_updates">Pending Updates</string>
    <string name="review">Review</string>
    <string name="continue_series">Continue</string>
    <string name="create_request">Create</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="current_series">Current Series</string>
    <string name="ft">FT</string>
    <string name="pk">PK</string>
    <string name="et1">ET1</string>
    <string name="et2">ET2</string>
    <string name="creating_update">Uploading request</string>
    <string name="request_camera_permission">FIFA Statistics needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="transition_profile_image">fifaTransitionProfileImage</string>
    <string name="transition_match_toolbar">fifaTransitionMatchToolbar</string>
    <string name="activity_pick_team">Choose a Team</string>
    <string name="error_loading_teams">Failed to load teams</string>
    <string name="theme">Theme</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="advanced">Advanced</string>
    <string name="pref_dark_theme">Dark Theme</string>
    <string name="pref_direct_camera">Direct Camera</string>
    <string name="pref_direct_camera_desc">Immediately open the camera when creating a match</string>
    <string name="pref_favorite_team">Favourite Team</string>
    <string name="pref_team_color_as_accent">Favourite team for accent colour</string>
    <string name="pref_resend_reg_token">Resend registration token</string>
    <string name="pref_update_player_cache">Update player cache</string>
    <string name="pref_save_bitmaps">Save match facts to gallery</string>
    <string name="updating_token">Updating token</string>
    <string name="updating_player_cache">Updating player cache</string>
</resources>