<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/starred" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
